fixed - fixed db context migration issue

--- a/TicketManagementUI/appsettings.json
+++ b/TicketManagementUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Database=ticket;User=root;Password=root;Port=8889;"
+    "DefaultConnection":"Server=127.0.0.1;User ID=root;Password=root;Database=ticket;Port=8889; AllowUserVariables=True;UseAffectedRows=False"
   },
 
   "Logging": {
