--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -15,10 +15,12 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
     </ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\TicketManagementUI\TicketManagementUI.csproj" />
+    <ItemGroup><!--      <ProjectReference Include="..\TicketManagementUI\TicketManagementUI.csproj" />-->
+    
+      <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
 </Project>
